corrected mobile spacing on about page

--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -3,6 +3,8 @@
   width: 120px;
   height: 120px;
   margin-right: 10px;
+  margin-bottom: 2px;
+  display: inline-block;
 }
 
 a {
@@ -21,8 +23,5 @@ img {
   a {
     font-size: 28px;
     text-align: left;
-  }
-  .myPhoto img {
-    margin-right: 3%;
   }
 }
